--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
-            <version>1.5.5.Final</version>
+            <version>1.5.5.Final</version> <!-- Use latest version -->
         </dependency>
         <dependency>
             <groupId>org.mapstruct</groupId>
